# EchoPy

./: .gitignore  ACTIVITY_LOG.md  LICENSE  PROJECT_CONTEXT.md  README.md  REVIEW.md  diagnose_audio.py  probe_8ch.py  probe_exclusive.py  probe_raw.py  pyproject.toml  requirements.txt  test_wasapi_simple.py
docs/: AUDIO_SETUP_WINDOWS.md
resources/: modern.qss
scripts/: deploy-skills.ps1
src/: __init__.py  audio_processor.py  main.py  themes.py  utils.py  visualizer.py  visualizer_factory.py
src/styles/: __init__.py  audio_lines.py  circular.py  fire_effect.py  frequency_rings.py  matrix_rain.py  oscilloscope.py  particles.py  radial_bars.py  sound_wave.py  spectrum_bars.py  waveform.py
src/ui/: __init__.py  controls.py  main_window.py  overlay.py  settings_dialog.py
tests/: test_utils.py
tools/: convert_icon.py  final_audio_check.py  forensics.py  make_ico.py  probe_audio.py
